# SAFT-Merge

./: README.md
linearized_saft/: README.md  pyproject.toml
linearized_saft/src/: args.py  eval.py  finetune.py  heads.py  linear_task_vectors.py  linearize.py  merging.py  sam.py  utils.py
linearized_saft/src/tv_datasets/: templates.py
sgd_saft/: README.md  pyproject.toml
sgd_saft/src/: args.py  eval.py  finetune.py  merging.py  modeling.py  task_vectors.py  utils.py
sgd_saft/src/tv_datasets/: registry.py
